# zmq-parallel-implementation

./: .gitignore  CMakeLists.txt  README.md
cmake/: build_test_executable.cmake  install_fmt.cmake
gtest/src/: s0_zmq_parallel_algorithms_test.cpp
include/private/: s0_jobs.hpp  s0_messages.hpp  s0_utils.hpp
include/private/algorithms/reduce/: reduce_default_strategy.hpp  reduce_strategy_interface.hpp  s0_reduce_default_strategy.hpp  s0_reduce_strategy_interface.hpp
include/private/s0_algorithms/s0_reduce/: s0_general_reduce_interface.hpp  s0_reduce_default_strategy.hpp  s0_reduce_registry.hpp  s0_reduce_strategy_interface.hpp  s0_register_macro.hpp
include/private/s0_jobs/: s0_jobs.hpp  s0_jobs_builder.hpp  s0_jobs_parser.hpp  s0_jobs_performer.hpp
include/public/: s0_parallel_algorithms_zmq.hpp
src/: s0_jobs.cpp  s0_parallel_algorithms_zmq.cpp  s0_utils.cpp
src/algorithms/reduce/: reduce_default_strategy.cpp
src/s0_algorithms/s0_reduce/: s0_reduce_default_strategy.cpp
src/s0_jobs/: s0_jobs.cpp  s0_jobs_builder.cpp  s0_jobs_parser.cpp  s0_jobs_performer.cpp
